--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
                 <div class="row">
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
-                            <div class="section-title">Lorem ipsum dolor sit amet</div>
-                            <h1 class="h1-large">Consectetur adipisg elit sed do eiusm</h1>
+                            <div class="section-title">Changing software; one app at a time</div>
+                            <h1 class="h1-large">DueTwo Software</h1>
                             <p class="p-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim, neque ut ultrices sollicitudin</p>
                             <a class="btn-solid-lg" href="#services">Offered services</a>
                             <a class="quote" href="#contact"><i class="fas fa-paper-plane"></i>Get quote</a>
