changed front view

--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
                         <div class="text-container">
                             <div class="section-title">Changing software; one app at a time</div>
                             <h1 class="h1-large">DueTwo Software</h1>
-                            <p class="p-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut dignissim, neque ut ultrices sollicitudin</p>
-                            <a class="btn-solid-lg" href="#services">Offered services</a>
+                            <p class="p-large">DueTwo had embraced the broad goal of making the world a better place. We will strive to do this through 
+                                the software create and publish to the world. The software we create will allow each and every person around the world
+                            to help make a difference in our ever-changing world.  </p>
+                            <a class="btn-solid-lg" href="#services">Projects</a>
                             <a class="quote" href="#contact"><i class="fas fa-paper-plane"></i>Get quote</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
