--- a/index.html
+++ b/index.html
@@ -51,17 +51,8 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#header">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#services">Services</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#projects">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#pricing">Pricing</a>
-                        </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">Drop</a>
+                            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">About</a>
                             <ul class="dropdown-menu" aria-labelledby="dropdown01">
                                 <li><a class="dropdown-item" href="article.html">Article Details</a></li>
                                 <li><div class="dropdown-divider"></div></li>
@@ -70,9 +61,18 @@
                                 <li><a class="dropdown-item" href="privacy.html">Privacy Policy</a></li>
                             </ul>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#projects">Projects</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#projects">Causes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#pricing">Contact</a>
+                        </li>
                     </ul>
                     <span class="nav-item">
-                        <a class="btn-solid-sm" href="#contact">Get quote</a>
+                        <a class="btn-solid-sm" href="#contact">Donate</a>
                     </span>
                 </div> <!-- end of navbar-collapse -->
             </div> <!-- end of container -->
@@ -88,7 +88,7 @@
                         <div class="text-container">
                             <div class="section-title">Changing software; one app at a time</div>
                             <h1 class="h1-large">DueTwo Software</h1>
-                            <p class="p-large">DueTwo had embraced the broad goal of making the world a better place. We will strive to do this through 
+                            <p class="p-large">DueTwo has embraced the broad goal of making the world a better place. We will strive to do this through 
                                 the software create and publish to the world. The software we create will allow each and every person around the world
                             to help make a difference in our ever-changing world.  </p>
                             <a class="btn-solid-lg" href="#services">Projects</a>
