added general updates across the board

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 the software create and publish to the world. The software we create will allow each and every person around the world
                             to help make a difference in our ever-changing world.  </p>
                             <a class="btn-solid-lg" href="#services">Projects</a>
-                            <a class="quote" href="#contact"><i class="fas fa-paper-plane"></i>Get quote</a>
+                            <a class="quote" href="#contact"><i class="fas fa-paper-plane"></i>Donate</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                     <div class="col-lg-6 col-xl-7">
@@ -220,10 +220,13 @@
                     </div> <!-- end of col -->
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
-                            <h2><span>Maecenas fringil</span><br> quam posu pele est</h2>
-                            <p>Maecenas fringilla quam posuere, pellentesque est nec, gravida turpis. Integer vitae mollis felis. Integer id quam id tellus hendrerit laciniad binfer</p>
-                            <p>Sed id dui rutrum, dictum urna eu, accumsan turpis. Fusce id auctor velit, sed viverra dui rem dina</p>
-                            <a class="btn-solid-reg" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Modal</a>
+                            <h2><span>Contact </span>US</h2>
+                            <p>Send us an email via the address below, and a member of our team will reach out to you shortly</p>
+                            <p>For a more specific directory, click the button below</p>
+                            <i class="fas fa-envelope"></i> &nbsp;<a href="mailto:info@duetwo.dev">info@duetwo.dev</a>
+                            <br>
+                            <br>
+                            <a class="btn-solid-reg" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Staff Directory</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
@@ -240,11 +243,11 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         <div class="col-lg-8">
                             <div class="image-container">
-                                <img class="img-fluid" src="images/details-modal.jpg" alt="alternative">
+                                <img class="img-fluid" src="images/duetwologo1.png" alt="alternative">
                             </div> <!-- end of image-container -->
                         </div> <!-- end of col -->
                         <div class="col-lg-4">
-                            <h3>Lorem Ipsum</h3>
+                            <h3>Staff Directory</h3>
                             <hr>
                             <p>In gravida at nunc sodales pretium. Vivamus semper, odio vitae mattis auctor, elit elit semper magna ac tum nico vela spider</p>
                             <h4>Dolor Sit Amet</h4>
@@ -321,7 +324,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="h2-heading">Tidunt leo eu laoreedt inter</h2>
+                        <h2 class="h2-heading">Our Projects!</h2>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
                 <div class="row">
@@ -330,9 +333,9 @@
                         <!-- Filter -->
                         <div class="button-group filters-button-group">
                             <button class="button is-checked" data-filter="*">ALL</button>
-                            <button class="button" data-filter=".design">DESIGN</button>
-                            <button class="button" data-filter=".development">DEVELOPMENT</button>
-                            <button class="button" data-filter=".marketing">MARKETING</button>
+                            <button class="button" data-filter=".design">WEB</button>
+                            <button class="button" data-filter=".development">APPS</button>
+                            <button class="button" data-filter=".marketing">COMING SOON</button>
                         </div> <!-- end of button group -->
                         <div class="grid">
                             <div class="element-item development">
@@ -602,43 +605,15 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h2 class="h2-heading"><span>Dictum fusce ut placerat</span><br> faucibus turpis in eu mi ultrices</h2>
-                        <p class="p-heading">Vel malesuada sapien condimentum nec. Fusce interdum nec urna et finibus pulvinar tortor id</p>
+                        <h2 class="h2-heading"><span>Contact</span> US</h2>
+                        <p class="p-heading">Send us an email via the address below, and a member of our team will reach out to you shortly</p>
                         <ul class="list-unstyled li-space-lg">
-                            <li><i class="fas fa-map-marker-alt"></i> &nbsp;22 Praesentum, Pharetra Fin, CB 12345, KL</li>
-                            <li><i class="fas fa-phone"></i> &nbsp;<a href="tel:008123456789">+12 345 6789</a></li>
-                            <li><i class="fas fa-envelope"></i> &nbsp;<a href="mailto:lorem@ipsum.com">lorem@ipsum.com</a></li>
+                            <li><i class="fas fa-envelope"></i> &nbsp;<a href="mailto:info@duetwo.dev">info@duetwo.dev</a></li>
                         </ul>
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
                 <div class="row">
                     <div class="col-lg-10 offset-lg-1">
-                        
-                        <!-- Contact Form -->
-                        <form>
-                            <div class="form-group">
-                                <input type="text" class="form-control-input" placeholder="Name" required>
-                            </div>
-                            <div class="form-group">
-                                <input type="email" class="form-control-input" placeholder="Email" required>
-                            </div>
-                            <div class="form-group">
-                                <select class="form-control-select" required>
-                                    <option class="select-option" value="" disabled selected>Project type</option>
-                                    <option class="select-option" value="Company Website">Company Website</option>
-                                    <option class="select-option" value="Landing Page">Landing Page</option>
-                                    <option class="select-option" value="Online Shop">Online Shop</option>
-                                </select>
-                            </div>
-                            <div class="form-group">
-                                <textarea class="form-control-textarea" placeholder="Message" required></textarea>
-                            </div>
-                            <div class="form-group">
-                                <button type="submit" class="form-control-submit-button">Submit</button>
-                            </div>
-                        </form>
-                        <!-- end of contact form -->
-
                     </div> <!-- end of col -->
                 </div> <!-- end of row -->
             </div> <!-- end of container -->
