--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             <a class="nav-link" href="#projects">Causes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#pricing">Contact</a>
+                            <a class="nav-link" href="#contact">Contact</a>
                         </li>
                     </ul>
                     <span class="nav-item">
@@ -210,7 +210,7 @@
 
 
         <!-- Details 1 -->
-        <div id="details" class="basic-1">
+        <div id="contact" class="basic-1">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-6 col-xl-7">
@@ -598,27 +598,6 @@
             </div> <!-- end of container -->
         </div> <!-- end of basic-2 -->
         <!-- end of invitation -->
-
-
-        <!-- Contact -->
-        <div id="contact" class="form-1">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h2 class="h2-heading"><span>Contact</span> US</h2>
-                        <p class="p-heading">Send us an email via the address below, and a member of our team will reach out to you shortly</p>
-                        <ul class="list-unstyled li-space-lg">
-                            <li><i class="fas fa-envelope"></i> &nbsp;<a href="mailto:info@duetwo.dev">info@duetwo.dev</a></li>
-                        </ul>
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-                <div class="row">
-                    <div class="col-lg-10 offset-lg-1">
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of form-1 -->
-        <!-- end of contact -->
 
 
         <!-- Footer -->
