--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         </li>
                     </ul>
                     <span class="nav-item">
-                        <a class="btn-solid-sm" href="#contact">Donate</a>
+                        <a class="btn-solid-sm" href="https://square.link/u/qRkAyTGD">Donate</a>
                     </span>
                 </div> <!-- end of navbar-collapse -->
             </div> <!-- end of container -->
@@ -86,13 +86,13 @@
                 <div class="row">
                     <div class="col-lg-6 col-xl-5">
                         <div class="text-container">
-                            <div class="section-title">Changing software; one app at a time</div>
+                            <div class="section-title">Changing software - one app at a time</div>
                             <h1 class="h1-large">DueTwo Software</h1>
                             <p class="p-large">DueTwo has embraced the broad goal of making the world a better place. We will strive to do this through 
                                 the software create and publish to the world. The software we create will allow each and every person around the world
                             to help make a difference in our ever-changing world.  </p>
-                            <a class="btn-solid-lg" href="#services">Projects</a>
-                            <a class="quote" href="#contact"><i class="fas fa-paper-plane"></i>Donate</a>
+                            <a class="btn-solid-lg" href="#projects">Projects</a>
+                            <a class="quote" href="https://square.link/u/qRkAyTGD"><i class="fas fa-paper-plane"></i>Donate</a>
                         </div> <!-- end of text-container -->
                     </div> <!-- end of col -->
                     <div class="col-lg-6 col-xl-7">
