changed navbar logo from generic to DueTwo

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
         <nav id="navbarExample" class="navbar navbar-expand-lg fixed-top navbar-light" aria-label="Main navigation">
             <div class="container">
 
-                <!-- Image Logo -->
+                <!-- Image Logo 
                 <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> 
-
+-->
                 <!-- Text Logo - Use this if you don't have a graphic logo -->
-                <!-- <a class="navbar-brand logo-text" href="index.html">Name</a> -->
+                 <a class="navbar-brand logo-text" href="index.html">DueTwo</a> 
 
                 <button class="navbar-toggler p-0 border-0" type="button" id="navbarSideCollapse" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -267,7 +267,7 @@
             </div> <!-- end of container -->
         </div> <!-- end of cards-2 -->
         <!-- end of pricing -->
-        
+
 
         <!-- Details 1 -->
         <div id="contact" class="basic-1">
