updated navbar tabs and the about section

--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
                             <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">About</a>
                             <ul class="dropdown-menu" aria-labelledby="dropdown01">
                                 <li><a class="dropdown-item" href="article.html">Article Details</a></li>
-                                <li><div class="dropdown-divider"></div></li>
-                                <li><a class="dropdown-item" href="terms.html">Terms Conditions</a></li>
-                                <li><div class="dropdown-divider"></div></li>
-                                <li><a class="dropdown-item" href="privacy.html">Privacy Policy</a></li>
+
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -132,17 +129,20 @@
                             <div class="col-lg-6 col-xl-5">
                                 <div class="text-container">
                                     <h2><span>About</span><br> DueTwo Software</h2>
-                                    <p>In gravida vitae nulla vitae tincidunt imperdiet ante. Pellentesque aliquet mi eu tortor dictum, non imperdiet ante viverra. Phasellus eget enim orci flig rine bilo</p>
+                                    <p>DueTwo has embraced the broad goal of making the world a better place. 
+                                        We will strive to do this through the software create and publish to the world. 
+                                        The software we create will allow each and every person around the world to help make a 
+                                        difference in our ever-changing world.</p>
                     
                                     <!-- Counter -->
                                     <div class="counter-container">
                                         <div class="counter-cell">
                                             <div data-purecounter-start="0" data-purecounter-end="1250" data-purecounter-duration="2" class="purecounter">1</div>
-                                            <div class="counter-info">Happy Customers</div>
+                                            <div class="counter-info">Lines of code written</div>
                                         </div> <!-- end of counter-cell -->
                                         <div class="counter-cell red">
                                             <div data-purecounter-start="0" data-purecounter-end="1380" data-purecounter-duration="2" class="purecounter">1</div>
-                                            <div class="counter-info">Issues Solved</div>
+                                            <div class="counter-info">Projects</div>
                                         </div> <!-- end of counter-cell -->
                                     </div> <!-- end of counter-container -->
                                     <!-- end of counter -->
