--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                             <a class="nav-link active" aria-current="page" href="#header">Home</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">About</a>
+                            <a class="nav-link dropdown-toggle" href="#about" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">About</a>
                             <ul class="dropdown-menu" aria-labelledby="dropdown01">
                                 <li><a class="dropdown-item" href="article.html">Article Details</a></li>
 
@@ -123,6 +123,7 @@
 
 
                 <!-- Details 2 -->
+                <div id = "about"> 
                 <div class="counter">
                     <div class="container">
                         <div class="row">
@@ -157,6 +158,7 @@
                         </div> <!-- end of row -->
                     </div> <!-- end of container -->
                 </div> <!-- end of counter -->
+            </div>
                 <!-- end of details 2 -->
 
 
@@ -178,7 +180,11 @@
                         <button class="button" data-filter=".design">WEB</button>
                         <button class="button" data-filter=".development">APPS</button>
                         <button class="button" data-filter=".marketing">COMING SOON</button>
-                    </div> <!-- end of button group -->
+                    </div> 
+                    
+                    <h4> Stay tuned for our first project coming soon!</h4>
+                    <!-- end of button group 
+
                     <div class="grid">
                         <div class="element-item development">
                             <a href="article.html">
@@ -234,6 +240,7 @@
                                 <p><strong>Big business</strong> - aliquam semper molestie nisi, at porttitor lacus suscipit in mole richter</p>
                             </a>
                         </div>
+                        -->
                     </div> <!-- end of grid -->
                     <!-- end of filter -->
                     
