added newsletter signup form link to home section

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <div class="col-lg-12">
                     <div class="text-container">
                         <h4>We are currenlty working on our debuet project, which is set to be unveiled later this year</h4>
-                        <p class="p-large">To stay up to date on DueTwo Software projects and announcements, <a href = "#contact"> click here </a> to subscribe to our newsletter.</p>
+                        <p class="p-large">To stay up to date on DueTwo Software projects and announcements, <a href = "https://forms.gle/iwos3WWQ7bK2VxV17"> click here </a> to subscribe to our newsletter.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -265,7 +265,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="card-title">
-                                    <img class="decoration-lines" src="images/decoration-lines.svg" alt="alternative"><span>Landing page</span><img class="decoration-lines flipped" src="images/decoration-lines.svg" alt="alternative">
+                                    <img class="decoration-lines" src="images/decoration-lines.svg" alt="alternative"><span>Climate Change</span><img class="decoration-lines flipped" src="images/decoration-lines.svg" alt="alternative">
                                 </div>
                                 <ul class="list-unstyled li-space-lg">
                                     <li>Fusce pulvinar eu mi acm</li>
@@ -276,8 +276,8 @@
                                     <li>Vivamus dignissim sit amet</li>
                                     <li>Ut convallis aliquama set</li>
                                 </ul>
-                                <div class="price">$200</div>
-                                <a href="#contact" class="btn-outline-reg">Get quote</a>
+                                <!-- <div class="price">$200</div> -->
+                                <a href="#contact" class="btn-outline-reg">Learn More</a>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -286,7 +286,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="card-title">
-                                    <img class="decoration-lines" src="images/decoration-lines.svg" alt="alternative"><span>Corporate site</span><img class="decoration-lines flipped" src="images/decoration-lines.svg" alt="alternative">
+                                    <img class="decoration-lines" src="images/decoration-lines.svg" alt="alternative"><span>Democratic TwoDues</span><img class="decoration-lines flipped" src="images/decoration-lines.svg" alt="alternative">
                                 </div>
                                 <ul class="list-unstyled li-space-lg">
                                     <li>Nunc commodo magna quis</li>
@@ -297,8 +297,8 @@
                                     <li>Sed laoreet blandit mollis</li>
                                     <li>Mauris non luctus est</li>
                                 </ul>
-                                <div class="price">$300</div>
-                                <a href="#contact" class="btn-outline-reg">Get quote</a>
+                              <!--   <div class="price">$300</div> -->
+                                <a href="#contact" class="btn-outline-reg">Learn More</a>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -307,7 +307,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="card-title">
-                                    <img class="decoration-lines" src="images/decoration-lines.svg" alt="alternative"><span>Online shop</span><img class="decoration-lines flipped" src="images/decoration-lines.svg" alt="alternative">
+                                    <img class="decoration-lines" src="images/decoration-lines.svg" alt="alternative"><span>N/A</span><img class="decoration-lines flipped" src="images/decoration-lines.svg" alt="alternative">
                                 </div>
                                 <ul class="list-unstyled li-space-lg">
                                     <li>Quisque rutrum mattis</li>
@@ -318,8 +318,8 @@
                                     <li>Mollis felis. Integer id quam</li>
                                     <li>Id tellus hendrerit lacinia</li>
                                 </ul>
-                                <div class="price">$400</div>
-                                <a href="#contact" class="btn-outline-reg">Get quote</a>
+                                <!-- <div class="price">$400</div> -->
+                                <a href="#contact" class="btn-outline-reg">Learn More</a>
                             </div>
                         </div>
                         <!-- end of card -->
