--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                             <div class="section-title">Changing software - one app at a time</div>
                             <h1 class="h1-large">DueTwo Software</h1>
                             <p class="p-large">DueTwo has embraced the broad goal of making the world a better place. We will strive to do this through 
-                                the software create and publish to the world. The software we create will allow each and every person around the world
+                                the software we create and publish to the world. The software we create will allow each and every person around the world
                             to help make a difference in our ever-changing world.  </p>
                             <a class="btn-solid-lg" href="#projects">Projects</a>
                             <a class="quote" href="https://square.link/u/qRkAyTGD"><i class="fas fa-paper-plane"></i>Donate</a>
