added a basic team section to the site +corefiles

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-container">
-                        <h4>We are currenlty working on our debuet project, which is set to be unveiled later this year</h4>
+                        <h4>We are currenlty working on our debut project, which is set to be unveiled later this year</h4>
                         <p class="p-large">To stay up to date on DueTwo Software projects and announcements, <a href = "https://forms.gle/iwos3WWQ7bK2VxV17"> click here </a> to subscribe to our newsletter.</p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
