--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                             <a class="nav-link" href="#causes">Causes</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#team">Team</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#contact">Contact</a>
                         </li>
                     </ul>
@@ -340,33 +343,8 @@
         <!-- end of pricing -->
 
 
-        <!-- Details 1 -->
-        <div id="contact" class="basic-1">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 col-xl-7">
-                        <div class="image-container">
-                            <img class="img-fluid" src="images/details-1.svg" alt="alternative">
-                        </div> <!-- end of image-container -->
-                    </div> <!-- end of col -->
-                    <div class="col-lg-6 col-xl-5">
-                        <div class="text-container">
-                            <h2><span>Contact </span>US</h2>
-                            <p>Send us an email via the address below, and a member of our team will reach out to you shortly</p>
-                          
-                            <i class="fas fa-envelope"></i> &nbsp;<a href="mailto:info@duetwo.dev">info@duetwo.dev</a>
-                            <br>
-                            <br>
-                        </div> <!-- end of text-container -->
-                    </div> <!-- end of col -->
-                </div> <!-- end of row -->
-            </div> <!-- end of container -->
-        </div> <!-- end of basic-1 -->
-        <!-- end of details 1 -->
-
-
  <!-- Team -->
- <div class="cards-3">
+ <div id = "team" class="cards-3">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -428,6 +406,29 @@
 </div> <!-- end of cards-3 -->
 <!-- end of team -->
 
+        <!-- Details 1 -->
+        <div id="contact" class="basic-1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-6 col-xl-7">
+                        <div class="image-container">
+                            <img class="img-fluid" src="images/details-1.svg" alt="alternative">
+                        </div> <!-- end of image-container -->
+                    </div> <!-- end of col -->
+                    <div class="col-lg-6 col-xl-5">
+                        <div class="text-container">
+                            <h2><span>Contact </span>US</h2>
+                            <p>Send us an email via the address below, and a member of our team will reach out to you shortly</p>
+                          
+                            <i class="fas fa-envelope"></i> &nbsp;<a href="mailto:info@duetwo.dev">info@duetwo.dev</a>
+                            <br>
+                            <br>
+                        </div> <!-- end of text-container -->
+                    </div> <!-- end of col -->
+                </div> <!-- end of row -->
+            </div> <!-- end of container -->
+        </div> <!-- end of basic-1 -->
+        <!-- end of details 1 -->
 
         <!-- Footer -->
         <div class="footer bg-gray">
