fixed navbar problems

--- a/index.html
+++ b/index.html
@@ -57,12 +57,15 @@
                         <li class="nav-item">
                             <a class="nav-link active" aria-current="page" href="#header">Home</a>
                         </li>
-                        <li class="nav-item dropdown">
+                      <!--   <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#about" id="dropdown01" data-bs-toggle="dropdown" aria-expanded="false">About</a>
                             <ul class="dropdown-menu" aria-labelledby="dropdown01">
                                 <li><a class="dropdown-item" href="article.html">Article Details</a></li>
 
                             </ul>
+                        </li> -->
+                        <li class="nav-item">
+                            <a class="nav-link" href="#about">About</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#projects">Projects</a>
