added minor changes

--- a/index.html
+++ b/index.html
@@ -149,20 +149,8 @@
                                         We will strive to do this through the software create and publish to the world. 
                                         The software we create will allow each and every person around the world to help make a 
                                         difference in our ever-changing world.</p>
-                    
-                                    <!-- Counter -->
-                                    <div class="counter-container">
-                                        <div class="counter-cell">
-                                            <div data-purecounter-start="0" data-purecounter-end="1250" data-purecounter-duration="2" class="purecounter">1</div>
-                                            <div class="counter-info">Lines of code written</div>
-                                        </div> <!-- end of counter-cell -->
-                                        <div class="counter-cell red">
-                                            <div data-purecounter-start="0" data-purecounter-end="1380" data-purecounter-duration="2" class="purecounter">1</div>
-                                            <div class="counter-info">Projects</div>
-                                        </div> <!-- end of counter-cell -->
-                                    </div> <!-- end of counter-container -->
-                                    <!-- end of counter -->
-                                    <a class="btn-solid-lg" href="#projects">Learn More</a>
+  
+                                    <a class="btn-solid-lg" href="plan.pdf">Learn More</a>
                                 </div> <!-- end of text-container -->
                             </div> <!-- end of col -->
                             <div class="col-lg-6 col-xl-7">
@@ -493,7 +481,7 @@
                         </ul>
                     </div> <!-- end of col -->
                     <div class="col-lg-6">
-                        <p class="p-small statement">Copyright © DueTwo Software</p>
+                        <p class="p-small statement">Copyright © DueTwo Software LLC</p>
                     </div> <!-- end of col -->
                 </div> <!-- enf of row -->
             </div> <!-- end of container -->
