made small changes +navbar

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             </li>
           </ul>
           <span class="nav-item">
-            <a class="btn-solid-sm" href="https://square.link/u/qRkAyTGD"
-              >Donate</a
+            <a class="btn-solid-sm" href=" "
+              >App Download</a
             >
           </span>
         </div>
@@ -144,8 +144,8 @@
               </p>
 
               <a class="btn-solid-lg" href="#projects">Projects</a>
-              <a class="quote" href="https://square.link/u/qRkAyTGD"
-                ><i class="fas fa-paper-plane"></i>Donate</a
+              <a class="quote" href="#contact"
+                ><i class="fas fa-paper-plane"></i>Contact us</a
               >
             </div>
             <!-- end of text-container -->
