--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
     />
 
     <!-- SEO Meta Tags -->
-    <meta name="description" content="Your description" />
-    <meta name="author" content="Your name" />
+    <meta name="description" content="DueTwo has embraced the broad goal of making the world a better place; one app at a time." />
+    <meta name="author" content="DueTwo Software" />
 
     <!-- OG Meta Tags to improve the way the post looks when you share the page on Facebook, Twitter, LinkedIn -->
-    <meta property="og:site_name" content="" />
+    <meta property="og:site_name" content="DueTwo Software" />
     <!-- website name -->
-    <meta property="og:site" content="" />
+    <meta property="og:site" content="duetwo.dev" />
     <!-- website link -->
-    <meta property="og:title" content="" />
+    <meta property="og:title" content="DueTwo has embraced the broad goal of making the world a better place; one app at a time." />
     <!-- title shown in the actual shared post -->
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="DueTwo has embraced the broad goal of making the world a better place; one app at a time." />
     <!-- description shown in the actual shared post -->
     <meta property="og:image" content="" />
     <!-- image link, make sure it's jpg -->
