added image link for preview

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <!-- website name -->
     <meta property="og:site" content="duetwo.dev" />
     <!-- website link -->
-    <meta property="og:title" content="DueTwo has embraced the broad goal of making the world a better place; one app at a time." />
+    <meta property="og:title" content="DueTwo Software" />
     <!-- title shown in the actual shared post -->
     <meta property="og:description" content="DueTwo has embraced the broad goal of making the world a better place; one app at a time." />
     <!-- description shown in the actual shared post -->
-    <meta property="og:image" content="" />
+    <meta property="og:image" content= "images/duetwologo1.png" />
     <!-- image link, make sure it's jpg -->
     <meta property="og:url" content="" />
     <!-- where do you want your post to link to -->
