--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- description shown in the actual shared post -->
     <meta property="og:image" content= "images/duetwologo1.png" />
     <!-- image link, make sure it's jpg -->
-    <meta property="og:url" content="" />
+    <meta property="og:url" content="images/duetwologo1.png" />
     <!-- where do you want your post to link to -->
     <meta name="twitter:card" content="summary_large_image" />
     <!-- to have large image post format in Twitter -->
