--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
               <div class="card-image">
                 <img
                   class="img-fluid"
-                  src="images/team-member-3.svg"
+                  src="images/jonahpic.png"
                   alt="alternative"
                 />
               </div>
