--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
               <div class="card-image">
                 <img
                   class="img-fluid"
-                  src="images/jonahpic.png"
+                  src="images/team-member-3.svg"
                   alt="alternative"
                 />
               </div>
@@ -566,24 +566,8 @@
                 />
               </div>
               <div class="card-body">
-                <h6 class="card-title">Lainey Wilson</h6>
-                <p>Marketing Director</p>
-              </div>
-            </div>
-            <!-- end of card -->
-
-            <!-- Card -->
-            <div class="card">
-              <div class="card-image">
-                <img
-                  class="img-fluid"
-                  src="images/team-member-3.svg"
-                  alt="alternative"
-                />
-              </div>
-              <div class="card-body">
                 <h6 class="card-title">Isabelle Sellah</h6>
-                <p>Graphic Design Specialist</p>
+                <p>Director of Marketing and Design</p>
               </div>
             </div>
             <!-- end of card -->
