--- a/index.html
+++ b/index.html
@@ -536,6 +536,7 @@
               <div class="card-body">
                 <h6 class="card-title">Natalie Obleton</h6>
                 <p>Director of Special Projects and Product Development</p>
+                <a href="mailto:natalie@duetwo.dev">natalie@duetwo.dev</a>
               </div>
             </div>
             <!-- end of card -->
@@ -551,7 +552,8 @@
               </div>
               <div class="card-body">
                 <h6 class="card-title">William Reynolds</h6>
-                <p>UI/UX Specialist</p>
+               <p>UI/UX Specialist</p>
+               <a href="mailto:will@duetwo.dev">will@duetwo.dev</a>
               </div>
             </div>
             <!-- end of card -->
@@ -566,8 +568,9 @@
                 />
               </div>
               <div class="card-body">
-                <h6 class="card-title">Isabelle Sellah</h6>
+                <h6 class="card-title">Isabelle Selah</h6>
                 <p>Director of Marketing and Design</p>
+                <a href="mailto:isabelle@duetwo.dev">isabelle@duetwo.dev</a>
               </div>
             </div>
             <!-- end of card -->
