--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
               <div class="card-image">
                 <img
                   class="img-fluid"
-                  src="images/team-member-3.svg"
+                  src="images/willpic.JPG"
                   alt="alternative"
                 />
               </div>
