added isabelle photo

--- a/index.html
+++ b/index.html
@@ -558,12 +558,12 @@
             </div>
             <!-- end of card -->
 
-            <!-- Card -->
-            <div class="card">
+             <!-- Card -->
+             <div class="card">
               <div class="card-image">
                 <img
                   class="img-fluid"
-                  src="images/team-member-3.svg"
+                  src="images/isabellepic3.png"
                   alt="alternative"
                 />
               </div>
