--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
       aria-label="Main navigation"
     >
       <div class="container">
-        <!-- Image Logo 
-                <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.svg" alt="alternative"></a> 
--->
-        <!-- Text Logo - Use this if you don't have a graphic logo -->
-        <a class="navbar-brand logo-text" href="index.html">DueTwo</a>
+        <!-- Image Logo -->
+                <a class="navbar-brand logo-image" href="index.html"><img src="images/logo.png" alt="alternative"></a> 
 
+        <!-- Text Logo - Use this if you don't have a graphic logo 
+        <a class="navbar-brand logo-text" href="index.html">DueTwo</a>
+-->
         <button
           class="navbar-toggler p-0 border-0"
           type="button"
