added kenji's picture to the website

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
               <div class="card-image">
                 <img
                   class="img-fluid"
-                  src="images/team-member-2.svg"
+                  src="images/kenjipic3.png"
                   alt="alternative"
                 />
               </div>
