added new will picture

--- a/index.html
+++ b/index.html
@@ -546,7 +546,7 @@
               <div class="card-image">
                 <img
                   class="img-fluid"
-                  src="images/team-member-2.svg"
+                  src="images/willpicNEW2.png"
                   alt="alternative"
                 />
               </div>
