updated project vote image

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <h2 class="h2-heading">Our Projects!</h2>
+            <h1 class="h1-heading">Our Projects!</h1>
           </div>
           <!-- end of col -->
         </div>
@@ -273,7 +273,7 @@
                 <a href=" ">
                   <img
                     class="img-fluid"
-                    src="images/Project Vote.png"
+                    src="images/newprojectvote.png"
                     alt="alternative"
                   />
                   <p>
