fixed wills picture

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               <div class="image-container">
                 <img
                   class="img-fluid"
-                  src="images/details-2.svg"
+                  src="images/logo icon.png"
                   alt="alternative"
                 />
               </div>
@@ -546,7 +546,7 @@
               <div class="card-image">
                 <img
                   class="img-fluid"
-                  src="images/willpicNEW2.png"
+                  src="images/team-member-2.svg"
                   alt="alternative"
                 />
               </div>
