fixed duwtwo logo in the abut section

--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
                   class="img-fluid"
                   src="images/logo icon.png"
                   alt="alternative"
+                  width="100" 
+                  height="200"
                 />
               </div>
               <!-- end of image-container -->
