added more info to the about section

--- a/index.html
+++ b/index.html
@@ -217,7 +217,12 @@
                   better place. We will strive to do this through the software
                   create and publish to the world. The software we create will
                   allow each and every person around the world to help make a
-                  difference in our ever-changing world.
+                  difference in our ever-changing world. 
+                  <br /> 
+                  DueTwo Software is proud to offer a strong plan for how we will grow and expand our product
+                  offerings as a company. The first project that we will pursue is “PROJECT VOTE”. Project Vote
+                  will be a multi-platform application developed to help make voting easier and more accessible to
+                  more people. Project Vote will be available later this year. 
                 </p>
 
                 <a class="btn-solid-lg" href="plan.pdf">Learn More</a>
